# AMC-OWMVG

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  run.py  test_unit.py
AMCowmvg/: __init__.py  antimonyTools.py  forms.py  routes.py  testing.py
AMCowmvg.egg-info/: PKG-INFO
AMCowmvg/static/: antimony1.txt  antimony2.txt
AMCowmvg/templates/: buildSystem.html  results.html  testing.html
docs/: Final Presentation.pptx
webapp/: __init__.py  antimonyTools.py  forms.py  routes.py
webapp/static/: antimony1.txt  antimony2.txt  test.txt
webapp/templates/: home.html  testing.html
